improve dirs that where deprecated